--- a/htdocs/templates/_head.phtml
+++ b/htdocs/templates/_head.phtml
@@ -10,6 +10,9 @@
     <title>HomeHub - Open source home automation system</title>
     <link href="/lib/bs/css/bootstrap.min.css" rel="stylesheet">
     <link href="/lib/fa/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/lib/toastr/toastr.min.css" rel="stylesheet">
+    <link href="/css/global.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
