--- a/htdocs/templates/_foot.phtml
+++ b/htdocs/templates/_foot.phtml
@@ -7,5 +7,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/jq.1.11.0.min.js"></script>
     <script src="/lib/bs/js/bootstrap.min.js"></script>
+    <script src="/lib/toastr/toastr.min.js"></script>
+    <script src="/js/bootbox.min.js"></script>
+    <script src="/js/global.js"></script>
   </body>
 </html>
