New header & footer

--- a/htdocs/templates/_foot.phtml
+++ b/htdocs/templates/_foot.phtml
@@ -1,10 +1,12 @@
 
-    </div> <!-- /container -->
+    </div><!-- eo .container #main -->
+    </div><!-- eo #wrap -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <footer class="footer well text-center">HomeHub 0.1 BETA<br>© 2014 Janne Juhala<br><a href="http://jjj.fi">JJJ.fi</a></footer>
+
+    <!--  style="margin-bottom:0;margin-top:20px;" class="footer well text-center" -->
+
     <script src="/js/jq.1.11.0.min.js"></script>
     <script src="/lib/bs/js/bootstrap.min.js"></script>
     <script src="/lib/toastr/toastr.min.js"></script>
