--- a/htdocs/templates/_head.phtml
+++ b/htdocs/templates/_head.phtml
@@ -20,10 +20,9 @@
     <![endif]-->
   </head>
 
-  <body role="document">
+  <body>
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -32,26 +31,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">HomeHub</a>
+          <a class="navbar-brand" href="/">HomeHub</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href=".">Home</a></li>
-            <li><a href="/actions/">Actions</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="/manage-actions/">Actions</a></li>
-                <li><a href="/manage-rules/">Rules</a></li>
-                <li><a href="/manage-commands/">Commands</a></li>
-                <li><a href="/manage-sensors/">Sensors</a></li>
-              </ul>
-            </li>
-            <li><a href="/history/">History</a></li>
-            <li><a href="/error-log/">Error log</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/actions/">Actions</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/manage-actions/">Actions</a></li>
+                  <li><a href="/manage-rules/">Rules</a></li>
+                  <li><a href="/manage-commands/">Commands</a></li>
+                  <li><a href="/manage-sensors/">Sensors</a></li>
+                </ul>
+              </li>
+              <li><a href="/history/">History</a></li>
+              <li><a href="/error-log/">Error log</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
-    <div class="container theme-showcase" role="main">
+
+    <div id="wrap">
+    <div class="container" id="main">
+
