--- a/htdocs/templates/tpl.manage-actions.phtml
+++ b/htdocs/templates/tpl.manage-actions.phtml
@@ -1,3 +1,27 @@
+
+<!-- Check if we need to show errors -->
+<?php if ($this->showError !== false) : ?>
+	<?php foreach($this->errorMsg as $error) : ?>
+		<div class="alert alert-danger">
+			<i class="fa fa-exclamation-triangle fa-4x floleft"></i>
+			<h4><strong><?=$error[0]?></strong></h4>
+			<?=$error[1]?>
+		</div>
+	<?php endforeach; ?>
+<?php endif; ?>
+
+<!-- Check if we need to show notices -->
+<?php if ($this->showNotice !== false) : ?>
+	<?php foreach($this->noticeMsg as $notice) : ?>
+		<div class="alert alert-success">
+			<i class="fa fa-check fa-4x floleft"></i>
+			<h4><strong><?=$notice[0]?></strong></h4>
+			<?=$notice[1]?>
+		</div>
+	<?php endforeach; ?>
+<?php endif; ?>
+
+
 <div class="row">
 	<div class="col-xs-6 col-md-7">
 		<div class="page-header">
@@ -22,9 +46,13 @@
 	</div>
 </div>
 
-<h2>Current actions</h2>
 <div class="panel panel-default">
-	<div class="panel-heading">Current actions</div>
+	<div class="panel-heading">
+		<h3 class="padding5px nomargin">
+			<i class="fa fa-bolt fa-lg padding5pxlr"></i>
+			Current actions
+		</h3>
+	</div>
 	<table class="table">
 		<tr>
 			<th>#</th>
@@ -33,7 +61,7 @@
 			<th>Triggers</th>
 			<th>SoUI</th>
 			<th>Notes</th>
-			<th>Manage</th>
+			<th>Delete</th>
 			<th>Run</th>
 		</tr>
 
@@ -49,18 +77,16 @@
 					<td><?=$action['showOnUI']?></td>
 					<td><?=$action['notes']?></td>
 					<td>
-						<div class="btn-group">
-							<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-								Action <span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><a href="#">Dropdown link</a></li>
-								<li><a href="#">Dropdown link</a></li>
-							</ul>
-						</div>
+						<form action="/manage-actions/" method="POST">
+						<input type="hidden" name="action" value="delete">
+						<input type="hidden" name="action_id" value="<?=$action['actionID']?>">
+						<button type="submit" class="a_del tippy btn btn-danger btn-sm" title="Delete action '<?=$action['name']?>'" data-actionid="<?=$action['actionID']?>" data-actionname="<?=$action['name']?>">
+							<i class="fa fa-times-circle fa-lg"></i>
+						</button>
+						</form>
 					</td>
 					<td>
-						<button class="a_run tippy" title="Run action '<?=$action['name']?>'" data-actionid="<?=$action['actionID']?>" data-actionname="<?=$action['name']?>">
+						<button class="a_run tippy btn btn-success btn-sm" title="Run action '<?=$action['name']?>'" data-actionid="<?=$action['actionID']?>" data-actionname="<?=$action['name']?>">
 							<i class="fa fa-play-circle fa-lg"></i>
 						</button>
 					</td>
@@ -75,106 +101,141 @@
 
 
 
-<div class="row" style="margin-top:100px;">
+<div class="row" style="margin-top:50px;">
 	<div class="col-xs-6 col-md-4">
-		<h3>Add new action</h3>
-		<form>
-			<div class="form-group">
-				<label for="inputEmail">Action name</label>
-				<i 
-					onclick="bootbox.alert('<h3>Action name</h3>You can choose any action name you wish, it doesn\'t matter nor has to match with anything');" 
-					class="fa fa-question-circle help-btn tippy"
-					title="Click for help"
-				>
-				</i>
-				<input type="email" class="form-control" id="inputEmail" name="name" placeholder="Action name">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="padding5px nomargin">
+					<i class="fa fa-plus fa-lg padding5pxlr"></i>
+					Add new action
+				</h3>
 			</div>
-			<div class="form-group">
-				<label for="inputEmail">Commands</label>
-				<input type="email" class="form-control" id="inputEmail" name="commandList" placeholder="cmd1name|cmd2name|cmd3name|...">
-			</div>
-			<div class="form-group">
-				<label for="inputEmail">Triggers</label>
-				<input type="email" class="form-control" id="inputEmail" name="triggers" placeholder="sensor1id|sensor2id|sensor3id|...">
-			</div>
-			<div class="checkbox">
-	            <label><input type="checkbox" name="showOnUI">Show on dashboard</label>
-	        </div>
-			Notes<br>
-			<textarea rows="4" class="form-control">...</textarea>
-
-		</form>
-	</div>
-	<div class="col-xs-6 col-md-8">
-		<h3>Quickly check available commands and triggers</h3>
-		<ul class="nav nav-tabs">
-			<li class="active"><a href="#quicklist-commands" data-toggle="tab">Commands</a></li>
-			<li><a href="#quicklist-triggers" data-toggle="tab">Triggers</a></li>
-		</ul>
-
-		<div class="tab-content">
-			<div class="tab-pane active" id="quicklist-commands">
-				<table class="table limit-table">
-					<tr>
-						<th class="col-md-1">#</th>
-						<th>Name</th>
-						<th>Command</th>
-						<th>Rule list</th>
-						<th>Notes</th>
-						<th class="col-md-1">Run</th>
-					</tr>
-
-					<?php
-						// Loop through all actions
-						foreach ($this->commands_list as $command):
-					?>
-							<tr>
-								<td><?=$command['commandID']?></td>
-								<td><?=$command['name']?></td>
-								<td><?=$command['command']?></td>
-								<td><?=$command['ruleList']?></td>
-								<td><?=$command['notes']?></td>
-								<td>
-									<button class="c_run tippy" title="Run command '<?=$command['name']?>'" data-actionid="<?=$command['commandID']?>" data-actionname="<?=$command['name']?>">
-										<i class="fa fa-play-circle fa-lg"></i>
-									</button>
-								</td>
-							</tr>
-					<?php
-						endforeach;
-					?>
-
-				</table>
-			</div>
-			<div class="tab-pane" id="quicklist-triggers">
-				<table class="table limit-table">
-					<tr>
-						<th class="col-md-1">#</th>
-						<th>Name</th>
-						<th>cmd_name</th>
-						<th>Last update</th>
-						<th class="col-md-1">Show On UI</th>
-						<th>Notes</th>
-					</tr>
-
-					<?php
-						// Loop through all actions
-						foreach ($this->sensors_list as $sensor):
-					?>
-							<tr>
-								<td><?=$sensor['sensorID']?></td>
-								<td><?=$sensor['name']?></td>
-								<td><?=$sensor['cmd_name']?></td>
-								<td><?=$sensor['lastUpdate']?></td>
-								<td><?=$sensor['showOnUI']?></td>
-								<td><?=$sensor['notes']?></td>
-							</tr>
-					<?php
-						endforeach;
-					?>
-
-				</table>
+			<div class="panel-body">
+				<form action="/manage-actions/" method="POST">
+					<div class="form-group">
+						<label>Action name</label>
+						<i 
+							onclick="bootbox.alert('<h3>Action name</h3>You can choose any action name you wish, it doesn\'t matter nor has to match with anything');" 
+							class="fa fa-question-circle help-btn tippy"
+							title="Click for help"
+						>
+						</i>
+						<input class="form-control" name="name" placeholder="Action name">
+					</div>
+					<div class="form-group">
+						<label>Commands</label>
+						<i 
+							onclick="bootbox.alert('<h3>Action\'s commands</h3>Write all commands you want to execute with this action here. Separate with |. Check available commands from \'Quickly check available commands and triggers\'-section (Name-column) next to \'Add new action\'-section.<br>Example: cmd1|lights1off|TVon|cmd4');" 
+							class="fa fa-question-circle help-btn tippy"
+							title="Click for help"
+						>
+						</i>
+						<input class="form-control" name="commandList" placeholder="cmd1name|cmd2name|cmd3name|...">
+					</div>
+					<div class="form-group">
+						<label>Triggers</label>
+						<i 
+							onclick="bootbox.alert('<h3>Action\'s triggers</h3>Optional. Write all sensors here you want to execute  this action with. Separate with |. Check available triggers from \'Quickly check available commands and triggers\'-section (cmd_name-column) next to \'Add new action\'-section.<br>Example: brightness1|door2|button2<br>Every time sensor value changes it executes the action where the sensor is set as trigger.<br>For actions linking to time-based commands which you\'d like to schedule, use * as trigger. This way it\'s triggered once every minute');" 
+							class="fa fa-question-circle help-btn tippy"
+							title="Click for help"
+						>
+						</i>
+						<input class="form-control" name="triggers" placeholder="sensor1id|sensor2id|sensor3id|...">
+					</div>
+					<div class="checkbox">
+						<label><input type="checkbox" name="showOnUI">Show on dashboard</label>
+					</div>
+					
+					<div class="form-group">
+						<label>Notes</label>
+						<textarea rows="4" name="notes" class="form-control">...</textarea>
+					</div>
+					<button type="submit" class="btn btn-primary">Add</button>
+				</form>
 			</div>
 		</div>
+	</div>
+
+	<div class="col-xs-6 col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="padding5px nomargin">
+					<i class="fa fa-list-ul fa-lg padding5pxlr"></i>
+					Available commands and triggers
+				</h3>
+			</div>
+			<div class="panel-body">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#quicklist-commands" data-toggle="tab">Commands</a></li>
+					<li><a href="#quicklist-triggers" data-toggle="tab">Triggers</a></li>
+				</ul>
+
+				<div class="tab-content">
+					<div class="tab-pane active" id="quicklist-commands">
+						<table class="table limit-table">
+							<tr>
+								<th class="col-md-1">#</th>
+								<th>Name</th>
+								<th>Command</th>
+								<th>Rule list</th>
+								<th>Notes</th>
+								<th class="col-md-1">Run</th>
+							</tr>
+
+							<?php
+								// Loop through all actions
+								foreach ($this->commands_list as $command):
+							?>
+									<tr>
+										<td><?=$command['commandID']?></td>
+										<td><?=$command['name']?></td>
+										<td><?=$command['command']?></td>
+										<td><?=$command['ruleList']?></td>
+										<td><?=$command['notes']?></td>
+										<td>
+											<button class="c_run tippy btn btn-success btn-sm" title="Run command '<?=$command['name']?>'" data-actionid="<?=$command['commandID']?>" data-actionname="<?=$command['name']?>">
+												<i class="fa fa-play-circle fa-lg"></i>
+											</button>
+										</td>
+									</tr>
+							<?php
+								endforeach;
+							?>
+
+						</table>
+					</div>
+					<div class="tab-pane" id="quicklist-triggers">
+						<table class="table limit-table">
+							<tr>
+								<th class="col-md-1">#</th>
+								<th>Name</th>
+								<th>cmd_name</th>
+								<th>Last update</th>
+								<th class="col-md-1">Show On UI</th>
+								<th>Notes</th>
+							</tr>
+
+							<?php
+								// Loop through all actions
+								foreach ($this->sensors_list as $sensor):
+							?>
+									<tr>
+										<td><?=$sensor['sensorID']?></td>
+										<td><?=$sensor['name']?></td>
+										<td><?=$sensor['cmd_name']?></td>
+										<td><?=$sensor['lastUpdate']?></td>
+										<td><?=$sensor['showOnUI']?></td>
+										<td><?=$sensor['notes']?></td>
+									</tr>
+							<?php
+								endforeach;
+							?>
+
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
