--- a/htdocs/templates/tpl.404.phtml
+++ b/htdocs/templates/tpl.404.phtml
@@ -1,2 +1,12 @@
-<h1>404</h1>
-<h2>Page not found</h2>
+<div class="row" style="margin-top:50px;">
+	<div class="col-xs-6 col-md-1"></div>
+	<div class="col-xs-6 col-md-3">
+		<i class="fa fa-meh-o fa-6"></i>
+	</div>
+	<div class="col-xs-6 col-md-7">
+		<p style="padding-top:50px;">
+			<h1><strong>404</strong></h1>
+			<h2>Page not found</h2>
+		</p>
+	</div>
+</div>
