Added licensing information

--- a/htdocs/css/global.css
+++ b/htdocs/css/global.css
@@ -1,3 +1,15 @@
+/*
+ *      Copyright (C) 2014 Janne Juhala 
+ *      http://jjj.fi/
+ *      janne.juhala@outlook.com
+ *  	https://github.com/jjuhala/HomeHub
+ *
+ *  This project is licensed under the terms of the MIT license.
+ *
+ */
+
+
+/* Toastr box opacity override
 /*.toast {
    opacity: 1 !important;
 }
