--- a/htdocs/templates/_foot.phtml
+++ b/htdocs/templates/_foot.phtml
@@ -2,7 +2,13 @@
     </div><!-- eo #wrap -->
 
 
-    <footer class="footer well text-center">HomeHub 0.1 BETA<br>© 2014 Janne Juhala<br><a href="http://jjj.fi">JJJ.fi</a></footer>
+    <footer class="footer well text-center">
+        HomeHub 0.1 BETA<br>
+        © 2014 Janne Juhala<br>
+        <a href="http://jjj.fi">JJJ.fi</a>
+         - 
+        <a href="https://github.com/jjuhala/HomeHub">HomeHub @ GitHub</a>
+        </footer>
 
     <!--  style="margin-bottom:0;margin-top:20px;" class="footer well text-center" -->
 
