--- a/htdocs/templates/_head.phtml
+++ b/htdocs/templates/_head.phtml
@@ -53,10 +53,10 @@
       </div>
     </div>
 
-
+    <?php if ($this->inc_cont_in_head) : ?>
     <div id="wrap">
     <div class="container" id="main">
-
+    <?php endif; ?>
           
       <!-- Check if we need to show errors -->
       <?php if ($this->showError !== false) : ?>
