--- a/htdocs/css/global.css
+++ b/htdocs/css/global.css
@@ -37,6 +37,10 @@ padding-top:50px;
 	background-size: cover;
     background-repeat: no-repeat;
 	margin-bottom:40px;
+	border-bottom:1px solid #555;
+
+	-webkit-box-shadow: 0 0 4px 1px #444;
+box-shadow: 0 0 4px 1px #444;
 }
 #herologo {
 	background-image: url('/img/hero_logo.png');
@@ -72,6 +76,10 @@ padding-top:50px;
 	font-size:12px;
 	line-height: 12px;
 	opacity: 0.7;
+}
+#herobar .itm.cmd .input-group .lessheight.btn {
+	width:30+px;
+	padding:0;
 }
 #herobar .itm.cmd .input-group .lessheight.btn:hover {
 	opacity:1;
