--- a/htdocs/templates/_head.phtml
+++ b/htdocs/templates/_head.phtml
@@ -35,8 +35,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="/actions/">Actions</a></li>
+              <li><a href="/">Home</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage<b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -47,7 +46,7 @@
                 </ul>
               </li>
               <li><a href="/history/">History</a></li>
-              <li><a href="/error-log/">Error log</a></li>
+              <li><a href="/log/">Log</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
